flux/ksbh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ksbh-charts
  namespace: ksbh
  annotations:
    ksbh.rs/modules: "https"
    ksbh.rs/excluded-modules: "pow"
spec:
  ingressClassName: ksbh
  tls:
    - hosts:
        - charts.ksbh.rs
      secretName: ksbh-rs
  rules:
    - host: charts.ksbh.rs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              resource:
                apiGroup: service-resource.ksbh.rs
                kind: static
                name: charts-ksbh-rs
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ksbh-docs
  namespace: ksbh
  annotations:
    ksbh.rs/modules: "https"
spec:
  ingressClassName: ksbh
  tls:
    - hosts:
        - ksbh.rs
      secretName: ksbh-rs
  rules:
    - host: ksbh.rs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              resource:
                apiGroup: service-resource.ksbh.rs
                kind: static
                name: docs-ksbh-rs
